--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "robelf",
+  "name": "customer",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
@@ -20,10 +21,12 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.15.0",
-    "@ionic-native/splash-screen": "~4.15.0",
-    "@ionic-native/status-bar": "~4.15.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic-native/core": "4.9.1",
+    "@ionic-native/http": "^4.16.0",
+    "@ionic-native/splash-screen": "4.9.1",
+    "@ionic-native/status-bar": "4.9.1",
+    "@ionic/storage": "2.1.3",
+    "cordova-plugin-advanced-http": "2.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -31,8 +34,14 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "3.1.10",
+    "@ionic/lab": "1.0.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-advanced-http": {}
+    }
+  }
 }
